--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="textBx">
             <h2>Hello, I'm<br><span translate="no">Ahmed Hafez.</span></h2>
             <h3 data-text="I'm a Front End Web Developer...">I'm a Front End Web Developer...</h3>
-            <a href="#about" class="btn">About Me</a>
+            <a href="#aboutHead" class="btn">About Me</a>
         </div>
     </section>
 
