--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                 <img src="img/product1.png">
                 <div class="overlay"></div>
                 <div class="projDetails">
-                    <h2 class="projName">Simple Portfolio</h2>
+                    <h2 class="projName">Renastic</h2>
                     <a href="#" class="projLink">Browse Site!</a>
                 </div>
             </div>
@@ -376,7 +376,7 @@
                 <img src="img/product2.png">
                 <div class="overlay"></div>
                 <div class="projDetails">
-                    <h2 class="projName">Simple Portfolio</h2>
+                    <h2 class="projName">BU Learn</h2>
                     <a href="#" class="projLink">Browse Site!</a>
                 </div>
             </div>
@@ -384,7 +384,7 @@
                 <img src="img/product3.png">
                 <div class="overlay"></div>
                 <div class="projDetails">
-                    <h2 class="projName">Simple Portfolio</h2>
+                    <h2 class="projName">Simple Portfolio1</h2>
                     <a href="#" class="projLink">Browse Site!</a>
                 </div>
             </div>
@@ -392,7 +392,7 @@
                 <img src="img/product4.png">
                 <div class="overlay"></div>
                 <div class="projDetails">
-                    <h2 class="projName">Simple Portfolio</h2>
+                    <h2 class="projName">Lambert</h2>
                     <a href="#" class="projLink">Browse Site!</a>
                 </div>
             </div>
@@ -400,7 +400,7 @@
                 <img src="img/product5.png">
                 <div class="overlay"></div>
                 <div class="projDetails">
-                    <h2 class="projName">Simple Portfolio</h2>
+                    <h2 class="projName">Visit Egypt</h2>
                     <a href="#" class="projLink">Browse Site!</a>
                 </div>
             </div>
@@ -408,7 +408,7 @@
                 <img src="img/product7.jpg">
                 <div class="overlay"></div>
                 <div class="projDetails">
-                    <h2 class="projName">Simple Portfolio</h2>
+                    <h2 class="projName">Silver Necklace</h2>
                     <a href="#" class="projLink">Browse Site!</a>
                 </div>
             </div>
@@ -416,7 +416,7 @@
                 <img src="img/product7.jpg">
                 <div class="overlay"></div>
                 <div class="projDetails">
-                    <h2 class="projName">Simple Portfolio</h2>
+                    <h2 class="projName">Silver Necklace</h2>
                     <a href="#" class="projLink">Browse Site!</a>
                 </div>
             </div>
@@ -424,7 +424,7 @@
                 <img src="img/product11.jpg">
                 <div class="overlay"></div>
                 <div class="projDetails">
-                    <h2 class="projName">Simple Portfolio</h2>
+                    <h2 class="projName">Technology</h2>
                     <a href="#" class="projLink">Browse Site!</a>
                 </div>
             </div>
@@ -432,7 +432,7 @@
                 <img src="img/product12.jpg">
                 <div class="overlay"></div>
                 <div class="projDetails">
-                    <h2 class="projName">Simple Portfolio</h2>
+                    <h2 class="projName">Brand</h2>
                     <a href="#" class="projLink">Browse Site!</a>
                 </div>
             </div>
@@ -440,7 +440,7 @@
                 <img src="img/product13.jpg">
                 <div class="overlay"></div>
                 <div class="projDetails">
-                    <h2 class="projName">Simple Portfolio</h2>
+                    <h2 class="projName">Dark Back.</h2>
                     <a href="#" class="projLink">Browse Site!</a>
                 </div>
             </div>
@@ -448,7 +448,7 @@
                 <img src="img/product14.jpg">
                 <div class="overlay"></div>
                 <div class="projDetails">
-                    <h2 class="projName">Simple Portfolio</h2>
+                    <h2 class="projName">Light Back.</h2>
                     <a href="#" class="projLink">Browse Site!</a>
                 </div>
             </div>
@@ -472,8 +472,7 @@
                         <div class="card">
                             <div class="layer"></div>
                             <div class="content">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                    tempor incididunt.</p>
+                                <p>He is a creative person that always create awesome designs.</p>
                                 <div class="imgBx">
                                     <img src="img/user-1.png">
                                 </div>
@@ -487,8 +486,7 @@
                         <div class="card">
                             <div class="layer"></div>
                             <div class="content">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                    tempor incididunt.</p>
+                                <p>Good Designs that focus on Simplicity and Interaction with users.</p>
                                 <div class="imgBx">
                                     <img src="img/user-2.png">
                                 </div>
@@ -502,8 +500,7 @@
                         <div class="card">
                             <div class="layer"></div>
                             <div class="content">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                    tempor incididunt.</p>
+                                <p>Hardworking Person creates great content that attract everyone.</p>
                                 <div class="imgBx">
                                     <img src="img/user-3.png">
                                 </div>
@@ -517,8 +514,7 @@
                         <div class="card">
                             <div class="layer"></div>
                             <div class="content">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                    tempor incididunt.</p>
+                                <p>I like his vision in his designs that he takes care of every detail in the project.</p>
                                 <div class="imgBx">
                                     <img src="img/user-1.png">
                                 </div>
@@ -532,8 +528,7 @@
                         <div class="card">
                             <div class="layer"></div>
                             <div class="content">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                    tempor incididunt.</p>
+                                <p>Creative and Nice Designer that attract your eyes in the first time you see the design.</p>
                                 <div class="imgBx">
                                     <img src="img/user-2.png">
                                 </div>
@@ -547,28 +542,12 @@
                         <div class="card">
                             <div class="layer"></div>
                             <div class="content">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                    tempor incididunt.</p>
+                                <p>He is Amazing Man that create a nice, simple and interactive websites.</p>
                                 <div class="imgBx">
                                     <img src="img/user-3.png">
                                 </div>
                                 <div class="details">
                                     <h2>Shereen Hassan<br><span>Event Speaker</span></h2>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="card">
-                            <div class="layer"></div>
-                            <div class="content">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                    tempor incididunt.</p>
-                                <div class="imgBx">
-                                    <img src="img/user-1.png">
-                                </div>
-                                <div class="details">
-                                    <h2>Noha Fawzy<br><span>Web Designer</span></h2>
                                 </div>
                             </div>
                         </div>
